--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typecheck": "nuxt typecheck"
   },
   "dependencies": {
+    "@iconify-json/fa": "^1.2.2",
     "@iconify-json/lucide": "^1.2.74",
     "@nuxt/ui": "^4.2.1",
     "nuxt": "^4.2.2"
@@ -22,5 +23,8 @@
     "typescript": "^5.9.3",
     "vue-tsc": "^3.1.5"
   },
-  "packageManager": "pnpm@10.23.0"
+  "packageManager": "pnpm@10.23.0",
+  "optionalDependencies": {
+    "@oxc-parser/binding-win32-x64-msvc": "^0.105.0"
+  }
 }
